--- a/WebApp/Resources/Shared.fr-FR.resx
+++ b/WebApp/Resources/Shared.fr-FR.resx
@@ -204,6 +204,12 @@
   <data name="MessageSent" xml:space="preserve">
     <value>Message has been sent (FR)</value>
   </data>
+  <data name="MyAuctions" xml:space="preserve">
+    <value>MyAuctions (FR)</value>
+  </data>
+  <data name="MyBids" xml:space="preserve">
+    <value>MyBids (FR)</value>
+  </data>
   <data name="NewAnswer" xml:space="preserve">
     <value>Type your answer here (FR)</value>
   </data>
@@ -225,6 +231,9 @@
   <data name="NowObserving" xml:space="preserve">
     <value>You now observe auction (FR):</value>
   </data>
+  <data name="Observed" xml:space="preserve">
+    <value>Observed (FR)</value>
+  </data>
   <data name="Price" xml:space="preserve">
     <value>Price (FR)</value>
   </data>
@@ -239,6 +248,18 @@
   </data>
   <data name="Search" xml:space="preserve">
     <value>Search (FR)</value>
+  </data>
+  <data name="ShowActive" xml:space="preserve">
+    <value>ShowActive (FR)</value>
+  </data>
+  <data name="ShowAll" xml:space="preserve">
+    <value>ShowAll (FR)</value>
+  </data>
+  <data name="ShowDraft" xml:space="preserve">
+    <value>ShowDraft (FR)</value>
+  </data>
+  <data name="ShowEnded" xml:space="preserve">
+    <value>ShowEnded (FR)</value>
   </data>
   <data name="SomethingWentWrong" xml:space="preserve">
     <value>Something went wrong (FR)</value>
