--- a/WebApp/Resources/Shared.resx
+++ b/WebApp/Resources/Shared.resx
@@ -204,6 +204,12 @@
   <data name="MessageSent" xml:space="preserve">
     <value>Message has been sent</value>
   </data>
+  <data name="MyAuctions" xml:space="preserve">
+    <value>My auctions</value>
+  </data>
+  <data name="MyBids" xml:space="preserve">
+    <value>My Bids</value>
+  </data>
   <data name="NewAnswer" xml:space="preserve">
     <value>Type your answer here...</value>
   </data>
@@ -225,6 +231,9 @@
   <data name="NowObserving" xml:space="preserve">
     <value>You now observe auction: </value>
   </data>
+  <data name="Observed" xml:space="preserve">
+    <value>Observed</value>
+  </data>
   <data name="Price" xml:space="preserve">
     <value>Price</value>
   </data>
@@ -239,6 +248,18 @@
   </data>
   <data name="Search" xml:space="preserve">
     <value>Search</value>
+  </data>
+  <data name="ShowActive" xml:space="preserve">
+    <value>Show Active</value>
+  </data>
+  <data name="ShowAll" xml:space="preserve">
+    <value>Show All</value>
+  </data>
+  <data name="ShowDraft" xml:space="preserve">
+    <value>Show Draft</value>
+  </data>
+  <data name="ShowEnded" xml:space="preserve">
+    <value>Show Ended</value>
   </data>
   <data name="SomethingWentWrong" xml:space="preserve">
     <value>Something went wrong</value>
