--- a/WebApp/Resources/Shared.pl-PL.resx
+++ b/WebApp/Resources/Shared.pl-PL.resx
@@ -195,7 +195,7 @@
   <data name="FieldTooShort" xml:space="preserve">
     <value>Wprowadzone dane są za krótkie</value>
   </data>
-  <data name="GenerateApikey" xml:space="preserve">
+  <data name="GenerateApiKey" xml:space="preserve">
     <value>Generuj klucz api</value>
   </data>
   <data name="HighContrast" xml:space="preserve">
@@ -219,7 +219,6 @@
   <data name="MessageSent" xml:space="preserve">
     <value>Wiadomość została wysłana</value>
   </data>
-
   <data name="MyAuctions" xml:space="preserve">
     <value>Moje aukcje</value>
   </data>
@@ -256,7 +255,6 @@
   <data name="NowObserving" xml:space="preserve">
     <value>Od teraz obserwujesz aukcje:</value>
   </data>
-
   <data name="Observed" xml:space="preserve">
     <value>Obserwowane</value>
   </data>
@@ -301,5 +299,11 @@
   </data>
   <data name="TimeSpan" xml:space="preserve">
     <value>Okres raportu (dni)</value>
+  </data>
+  <data name="AccessDenied" xml:space="preserve">
+    <value>Odmowa dostępu</value>
+  </data>
+  <data name="BackToHomePage" xml:space="preserve">
+    <value>Powrót do strony głównej</value>
   </data>
 </root>
