--- a/WebApp/Resources/Shared.resx
+++ b/WebApp/Resources/Shared.resx
@@ -300,4 +300,19 @@
   <data name="TimeSpan" xml:space="preserve">
     <value>Report time span (days)</value>
   </data>
+  <data name="Publish" xml:space="preserve">
+    <value>Publish</value>
+  </data>
+  <data name="NewBidMailSubject" xml:space="preserve">
+    <value>New bid has been placed</value>
+  </data>
+  <data name="NewBidMailBody" xml:space="preserve">
+    <value>New bid has been placed on auction {0}. Current highest bid is for {1}.</value>
+  </data>
+  <data name="EndOfAuctionMailSubject" xml:space="preserve">
+    <value>Auction has ended</value>
+  </data>
+  <data name="EndOfAuctionMailBody" xml:space="preserve">
+    <value>Auction {0} has ended!</value>
+  </data>
 </root>
