--- a/WebApp/Resources/Shared.resx
+++ b/WebApp/Resources/Shared.resx
@@ -303,8 +303,9 @@
   <data name="AccessDenied" xml:space="preserve">
     <value>Access Denied</value>
   </data>
-  <data name="BackToHomePage" xml:space="preserve">
+	<data name="BackToHomePage" xml:space="preserve">
     <value>Back to home page</value>
+	  </data>
   <data name="Publish" xml:space="preserve">
     <value>Publish</value>
   </data>
