--- a/WebApp/Resources/Shared.pl-PL.resx
+++ b/WebApp/Resources/Shared.pl-PL.resx
@@ -219,7 +219,6 @@
   <data name="MessageSent" xml:space="preserve">
     <value>Wiadomość została wysłana</value>
   </data>
-
   <data name="MyAuctions" xml:space="preserve">
     <value>Moje aukcje</value>
   </data>
@@ -256,7 +255,6 @@
   <data name="NowObserving" xml:space="preserve">
     <value>Od teraz obserwujesz aukcje:</value>
   </data>
-
   <data name="Observed" xml:space="preserve">
     <value>Obserwowane</value>
   </data>
@@ -301,5 +299,11 @@
   </data>
   <data name="TimeSpan" xml:space="preserve">
     <value>Okres raportu (dni)</value>
+  </data>
+  <data name="TopAuctions" xml:space="preserve">
+    <value>Najaktywniejsze aukcje</value>
+  </data>
+  <data name="Top10" xml:space="preserve">
+    <value>Lista 10 najbardziej aktywnych aukcji</value>
   </data>
 </root>
